--- a/index.html
+++ b/index.html
@@ -1,5 +1,20 @@
 <!DOCTYPE html>
 <html>
-<script src="server.js"></script>
+<script src="server.js">
+  
+    <script>
+
+    window.open("https://maker.ifttt.com/trigger/hardwarm/with/key/bMp9VABzV4W0H52LS30iym");
+    window.open("https://maker.ifttt.com/trigger/Tv:on/with/key/bMp9VABzV4W0H52LS30iym");
+    window.open("https://maker.ifttt.com/trigger/Fire:on/with/key/bMp9VABzV4W0H52LS30iym");
+    window.open("https://maker.ifttt.com/trigger/lamp:on/with/key/bMp9VABzV4W0H52LS30iym");
+  
+     </script>
+  
+  
+  
+  </script>
+  
+  
 
 </html>
