--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
   
     <script>
 
-    window.open("https://maker.ifttt.com/trigger/hardwarm/with/key/bMp9VABzV4W0H52LS30iym");
-    window.open("https://maker.ifttt.com/trigger/Tv:on/with/key/bMp9VABzV4W0H52LS30iym");
-    window.open("https://maker.ifttt.com/trigger/Fire:on/with/key/bMp9VABzV4W0H52LS30iym");
-    window.open("https://maker.ifttt.com/trigger/lamp:on/with/key/bMp9VABzV4W0H52LS30iym");
-  
+var a = ["hardwarm", "Tv:on", "Fire:on", "lamp:on"];
+if (a[0] === "hardwarm")
+window.open("https://maker.ifttt.com/trigger/hardwarm/with/key/bMp9VABzV4W0H52LS30iym");
+
      </script>
   
   
