--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title></title>
   </head>
   <body>
-
+    <h1> Triggered </h1>
     <script>
     // server.js
     // where your node app starts
